# ir-search

./: .gitattributes  .gitignore  AGENTS.md  README.md  pyproject.toml
benchmarks/: queries_investment_research.yaml  search_source_eval.py
configs/: accounts.example.json  wechat_research_accounts.txt
docs/: acceptance_testing.md  cursor_local_research_setup.md  cursor_research_workspace_setup.md  deep_research_design.md  evidence_schema.md  fallback_firewall.md  mcp_tools.md  review_fix_baseline.md  searxng_setup.md  security_policy.md  wechat_gzh_success_playbook.md  wechat_opencli_setup.md
ir_search/: __init__.py  __main__.py  cache.py  capabilities.py  config.py  config_validation.py  deep_research.py  entity.py  evidence.py  kernel.py  mcp_server.py  models.py  network.py  pipeline.py  rerank.py  source_health.py  urlnorm.py
outputs/: zsxq_week_20260614_20260621.json
research_synthesizer/: __init__.py  summarize.py
scripts/: bootstrap_cursor_research_workspace.py  run_acceptance_cases.py  score_acceptance_results.py
tests/: acceptance_cases.yaml  test_acceptance_scoring.py  test_adapter_modes.py  test_anysearch.py  test_bocha.py  test_bootstrap_defaults.py  test_cache.py  test_cache_atomic.py  test_call_logger.py  test_cninfo_adapter.py  test_cninfo_live.py  test_config_validation.py  test_coverage_searxng.py  test_cursor_workspace_template.py  test_dajiala.py  test_datetime_utc.py  test_deep_research_smoke.py  test_entity.py  test_evidence.py  test_evidence_type_classification.py  test_exa.py  test_experimental_adapters.py  test_extract_evidence.py  (+46 more)
(+88 files in other folders)
