[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ir-search"
version = "0.1.0"
description = "Deterministic investment research search kernel"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["PyYAML>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=8"]
mcp = ["mcp>=1"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
