[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ir-search"
version = "0.1.0"
description = "Deterministic investment research search kernel"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["PyYAML>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=8"]
mcp = ["mcp>=1"]
extract = [
  "beautifulsoup4>=4.12",
  "httpx>=0.27",
  "PyMuPDF>=1.24",
  "trafilatura>=1.12",
]
browser = ["playwright>=1.45"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
